Additional JVM option analysis.